# archive

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: error.rs  extractor.rs  format.rs  lib.rs  path_safety.rs
tests/: ar_tests.rs  content_tests.rs  declared_size_bypass_tests.rs  decompression_bomb_tests.rs  integration_tests.rs  path_traversal_tests.rs  sevenz_tests.rs  single_file_tests.rs  size_limit_tests.rs  tar_tests.rs  zip_tests.rs
tests/common/: mod.rs
