[package]
name = "archive"
version = "0.1.0"
edition = "2024"
authors = ["secana"]
license = "MIT OR Apache-2.0"
description = "A unified interface for extracting common archive formats in-memory"
repository = "https://github.com/secana/archive"
readme = "README.md"
keywords = ["archive", "zip", "tar", "compression", "extraction"]
categories = ["compression", "filesystem"]

[dependencies]
zip = { version = "6.0", default-features = false, features = ["deflate"] }
tar = "0.4"
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
bzip2 = "0.6"
lzma-rs = "0.3"
lz4 = "1.28"
zstd = "0.13"
sevenz-rust = "0.6"
thiserror = "2.0"
mime-type = "0.1"
